--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       <li> 
         <p><a href="#">INFORMACION</a></p>
         <ul>
-          <li><a href="INFO.PHP">INFORMACION</a></li>
-          <li><a href="GALERIAMP4.PHP">¿Como relizar tramites?</a></li>
+          <li><a href="INFO.html">INFORMACION</a></li>
+          <li><a href="GALERIAMP4.html">¿Como relizar tramites?</a></li>
           <li><a href="#">.......</a></li>
         </ul>
       </li>
@@ -161,7 +161,7 @@
         <p><a href="#">TRÁMITES</a></p>
         <ul>
           <li><a href="tramites.html">Ciudadanos administrativos</a></li>
-          <li><a href="gestionartramite.php">Gestionar Trámite</a></li>
+          <li><a href="gestionartramite.html">Gestionar Trámite</a></li>
           <li><a href="#">.......</a></li>
         </ul>
       </li>
@@ -169,7 +169,7 @@
       <li>  
         <p><a href="#">PAGO</a></p>
         <ul>
-          <li><a href="PAGOS.PHP">Servicios y derechos</a></li>
+          <li><a href="PAGOS.html">Servicios y derechos</a></li>
           <li><a href="">.......</a></li>
           <li><a href="#">.......</a></li>
         </ul>
@@ -183,9 +183,9 @@
         </ul>
       </li>
       <li>
-        <p><a href="MENU.php">VISITANTES</a></p>
+        <p><a href="MENU.html">VISITANTES</a></p>
         <ul>
-          <li><a href="index2.php">Registros</a></li>
+          <li><a href="index2.html">Registros</a></li>
           <li><a href="#">.......</a></li>
           <li><a href="#">.......</a></li>
         </ul>
@@ -196,7 +196,7 @@
 
       <!-- 🔹 Botón de DUDAS más pequeño y centrado -->
       <li>
-        <a href="index3.php" class="dudas-link">
+        <a href="index3.html" class="dudas-link">
           <img src="DUDA.png" alt="Dudas" class="icono-dudas">
           <span class="texto-dudas">DUDAS</span>
         </a>
