--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Menú App Estético</title>
+<title>Menú con submenu</title>
 
 <!-- Fuente Raleway -->
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -113,7 +113,7 @@
   .hero-image {
     width: 100%;
     height: auto;
-    max-height: calc(100vh - 70px);
+    max-height: calc(115vh - 70px);
     object-fit: contain;
     display: block;
   }
