--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Menú App Estético Fondo Fijo</title>
+<title>Menú Estético Celular</title>
 
 <!-- Fuente Raleway -->
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
 
   /* ---- MENU COMPUTADORA ---- */
   nav {
-    background: rgba(231, 76, 60, 0.5); /* rojo semi */
+    background: rgba(231, 76, 60, 0.5);
     position: relative;
     padding-left: 60px;
     height: 70px;
@@ -163,12 +163,13 @@
 
     nav {
       height: auto;
-      padding: 15px 20px;
-      background: #FFB7C5; /* rosa pastel celular */
+      padding: 20px; /* más grande */
+      background: #E74C3E50; /* color original de tu menú */
       border-bottom-left-radius: 15px;
       border-bottom-right-radius: 15px;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
+      font-weight: bold; /* encabezado más “grueso” */
     }
 
     nav ul {
@@ -176,9 +177,9 @@
       width: 100%;
       display: none;
       padding: 10px 0;
-      gap: 8px;
+      gap: 10px;
       border-radius: 10px;
-      background: #FFDDEE;
+      background: #B19CD9; /* color original submenu */
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
     }
 
@@ -189,15 +190,15 @@
     nav ul li a {
       width: 100%;
       text-align: center;
-      padding: 14px 0;
+      padding: 16px 0;
       font-size: 18px;
       border-radius: 15px;
-      background: #C8A2C8; /* lila pastel */
+      background: #B19CD9; /* color original */
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
 
     nav ul li a:hover {
-      background: #E6DAF0;
+      background: #D8BFD8; /* color hover original */
       transform: translateY(0);
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
@@ -208,7 +209,7 @@
       left: 0;
       width: 100%;
       display: none;
-      background: #F8E6F8;
+      background: #D8BFD8; /* color original submenu */
       border-radius: 12px;
       padding: 5px 0;
     }
@@ -223,17 +224,16 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 200vh; /* largo extendido */
+      height: 200vh;
       object-fit: cover;
-      filter: blur(1.5px) brightness(1.2) saturate(1.1);
-      background: linear-gradient(135deg, #FFE0F0, #FFDDEE);
+      filter: blur(1px) brightness(1.1);
       z-index: 0;
     }
 
     .contenido {
       position: relative;
       z-index: 10;
-      margin-top: 70px;
+      margin-top: 90px; /* espacio mayor por encabezado más grande */
       padding: 15px;
     }
 
@@ -313,7 +313,7 @@ function toggleMenu() {
   <img src="IMGC.png" alt="Imagen grande" class="hero-image">
 
   <div class="contenido">
-    <!-- Aquí va el contenido de tu página -->
+    <!-- Contenido de tu página -->
     <p>Aquí tu contenido principal...</p>
   </div>
 
