--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ function toggleMenu() {
   <div class="hamburger" onclick="toggleMenu()">☰</div>
 
   <nav>
-    <img src="LOGOCECY.PNG" alt="Logo" class="logo">
+    <img src="LOGOCECY.png" alt="Logo" class="logo">
 
     <form method="get" action="https://www.google.com/search" target="_blank" style="margin-left:60px; margin-top:10px;">
         <input type="search" name="q" placeholder="Buscar..." autofocus required>
